kubernetes-networking-avanzado/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    zone: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    zone: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    zone: database
